FIX: Overflow

--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -2,7 +2,7 @@
 footer {
     margin-top: auto;
     background-color: var(--base-red);
-    width: 100vw;
+    width: 100%;
     height: 160px;
     box-shadow: 0em -0.3em 1em rgb(76 68 82 / 60%);
 
