--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,7 +1,7 @@
 
 header {
     background-color: var(--base-red);
-    width: 100vw;
+    width: 100%;
     height: 120px;
     overflow: hidden;
     box-shadow: 0em 0.5em 0.5em rgb(76 68 82 / 60%);
@@ -12,7 +12,7 @@ header {
     align-items: center;
     justify-content: start;
     flex-direction: row;
-    width: 100vw;
+    width: 100%;
     height: 120px;
 }
 
